support to change user email

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -80,6 +80,6 @@ play.modules.enabled += "modules.SilhouetteModule"
 # *.xing.com
 # frame-src
 # clef.io
-play.filters.headers.contentSecurityPolicy="1.sql-src 'self'; img-src 'self' fbcdn-profile-a.akamaihd.net *.twimg.com *.googleusercontent.com *.xingassets.com vk.com *.yimg.com secure.gravatar.com; style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com maxcdn.bootstrapcdn.com cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' fonts.gstatic.com fonts.googleapis.com cdnjs.cloudflare.com; script-src 'self' clef.io; connect-src 'self' twitter.com *.xing.com; frame-src clef.io"
+play.filters.headers.contentSecurityPolicy="img-src 'self' data: fbcdn-profile-a.akamaihd.net *.twimg.com *.googleusercontent.com *.xingassets.com vk.com *.yimg.com secure.gravatar.com; style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com maxcdn.bootstrapcdn.com cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' data: fonts.gstatic.com fonts.googleapis.com cdnjs.cloudflare.com; script-src 'unsafe-inline' 'self' clef.io; connect-src 'self' twitter.com *.xing.com; frame-src clef.io *"
 
 include "silhouette.conf"
