using config file instead of env vars

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,6 +16,12 @@ db.default.poolMaxSize=20
 db.default.poolConnectionTimeoutMillis=1000
 
 # LDAP settings
+ldap.host="localhost"
+ldap.port=389
+ldap.bind.user.name="cn=admin,dc=example,dc=org"
+ldap.bind.user.pass="password"
+ldap.group.users="ou=users,dc=example,dc=org"
+
 play.modules.enabled += "modules.LdapModule"
 
 # The application languages
