added forum and kanban entries

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,24 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
+# Curo configuration
+# ~~~~~
+curo.url="intern.example.org"
+curo.protocol="https://"
+
+# Third party application urls
+# ~~~~~
+app.nextcloud.url="cloud.example.org"
+app.kanboard.url="kanban.example.org"
+app.discourse.url="forum.example.org"
+app.rocketchat.url="chat.example.org"
+
+# Nextcloud configuration
+# ~~~~~
+app.nextcloud.calendar.path="/index.php/apps/calendar"
+app.nextcloud.files.path="/index.php/apps/files"
+app.nextcloud.carsharing.path="/index.php/apps/external/1"
+
 # Database configuration
 # ~~~~~
 # You can declare as many datasources as you want.
