--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,12 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
+# Enabled modules
+# ~~~~~
+play.modules.enabled += "modules.LdapModule"
+play.modules.enabled += "modules.SilhouetteModule"
+play.modules.enabled += "scalikejdbc.PlayDBApiAdapterModule"
+
 # Curo configuration
 # ~~~~~
 curo.url="intern.example.org"
@@ -23,10 +29,10 @@ app.nextcloud.carsharing.path="/index.php/apps/external/1"
 # ~~~~~
 # You can declare as many datasources as you want.
 db.default.driver="org.h2.Driver"
-db.default.url="jdbc:h2:file:./db/playapp"
+db.default.url="jdbc:h2:mem:playapp"
 # NOTE: sclaikejdbc-config 2.2.6 doesn't support username, use 2.2.7 or higher
-db.default.username=sa
-db.default.password=sa
+db.default.username=""
+db.default.password=""
 
 # Connection Pool settings
 db.default.poolInitialSize=10
@@ -40,7 +46,6 @@ ldap.bind.user.name="cn=admin,dc=example,dc=org"
 ldap.bind.user.pass="password"
 ldap.group.users="ou=users,dc=example,dc=org"
 
-play.modules.enabled += "modules.LdapModule"
 
 # The application languages
 # ~~~~~
@@ -54,9 +59,6 @@ play.http.errorHandler = "utils.ErrorHandler"
 # ~~~~~
 play.http.filters = "utils.Filters"
 
-# The application DI modules
-# ~~~~~
-play.modules.enabled += "modules.SilhouetteModule"
 
 # Security Filter Configuration - Content Security Policy
 # ~~~~~
