added constraints, added german translations of errors and implemented half coin values

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,7 +49,7 @@ ldap.group.users="ou=users,dc=example,dc=org"
 
 # The application languages
 # ~~~~~
-play.i18n.langs=["en"]
+play.i18n.langs=["de"]
 
 # Registers the error handler
 # ~~~~~
