--- a/conf/application.conf
+++ b/conf/application.conf
@@ -28,16 +28,10 @@ app.nextcloud.carsharing.path="/index.php/apps/external/1"
 # Database configuration
 # ~~~~~
 # You can declare as many datasources as you want.
-db.default.driver="org.h2.Driver"
-db.default.url="jdbc:h2:mem:playapp"
-# NOTE: sclaikejdbc-config 2.2.6 doesn't support username, use 2.2.7 or higher
-db.default.username=""
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/test"
+db.default.username="root"
 db.default.password=""
-
-# Connection Pool settings
-db.default.poolInitialSize=10
-db.default.poolMaxSize=20
-db.default.poolConnectionTimeoutMillis=1000
 
 # LDAP settings
 ldap.host="localhost"
