impl support for cinema shortcut

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,6 +18,7 @@ app.nextcloud.url="cloud.example.org"
 app.kanboard.url="kanban.example.org"
 app.discourse.url="forum.example.org"
 app.rocketchat.url="chat.example.org"
+app.kino.url="kino.wirvomgut.de"
 
 # Nextcloud configuration
 # ~~~~~
