--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,11 +1,26 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
+# The application languages
+# ~~~~~
+play.i18n.langs=["de"]
+
+# Registers the request handler
+# ~~~~~
+play.http.requestHandler = "play.api.http.DefaultHttpRequestHandler"
+
+# Registers the filters
+# ~~~~~
+play.http.filters = "utils.Filters"
+
 # Enabled modules
 # ~~~~~
 play.modules.enabled += "modules.LdapModule"
 play.modules.enabled += "modules.SilhouetteModule"
 play.modules.enabled += "scalikejdbc.PlayDBApiAdapterModule"
+
+play.modules.disabled += "com.mohiva.play.silhouette.api.actions.SecuredErrorHandlerModule"
+play.modules.disabled += "com.mohiva.play.silhouette.api.actions.UnsecuredErrorHandlerModule"
 
 # Curo configuration
 # ~~~~~
@@ -39,19 +54,6 @@ ldap.port=389
 ldap.bind.user.name="cn=admin,dc=example,dc=org"
 ldap.bind.user.pass="password"
 ldap.group.users="ou=users,dc=example,dc=org"
-
-
-# The application languages
-# ~~~~~
-play.i18n.langs=["de"]
-
-# Registers the error handler
-# ~~~~~
-play.http.errorHandler = "utils.ErrorHandler"
-
-# Registers the filters
-# ~~~~~
-play.http.filters = "utils.Filters"
 
 
 # Security Filter Configuration - Content Security Policy
