--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -5,6 +5,7 @@ silhouette {
   authenticator.cookiePath="/"
   authenticator.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
   authenticator.httpOnlyCookie=true
+  authenticator.sameSite="Lax"
   authenticator.useFingerprinting=true
   authenticator.authenticatorIdleTimeout=30 minutes
   authenticator.authenticatorExpiry=12 hours
@@ -13,19 +14,32 @@ silhouette {
   authenticator.rememberMe.authenticatorIdleTimeout=5 days
   authenticator.rememberMe.authenticatorExpiry=30 days
 
+  authenticator.signer.key = "[changeme]" // A unique encryption key
+  authenticator.crypter.key = "[changeme]" // A unique encryption key
+
   # OAuth1 token secret provider settings
   oauth1TokenSecretProvider.cookieName="OAuth1TokenSecret"
   oauth1TokenSecretProvider.cookiePath="/"
   oauth1TokenSecretProvider.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
   oauth1TokenSecretProvider.httpOnlyCookie=true
+  oauth1TokenSecretProvider.sameSite="Lax"
   oauth1TokenSecretProvider.expirationTime=5 minutes
 
-  # OAuth2 state provider settings
-  oauth2StateProvider.cookieName="OAuth2State"
-  oauth2StateProvider.cookiePath="/"
-  oauth2StateProvider.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
-  oauth2StateProvider.httpOnlyCookie=true
-  oauth2StateProvider.expirationTime=5 minutes
+  oauth1TokenSecretProvider.signer.key = "[changeme]" // A unique encryption key
+  oauth1TokenSecretProvider.crypter.key = "[changeme]" // A unique encryption key
+
+  # Social state handler
+  socialStateHandler.signer.key = "[changeme]" // A unique encryption key
+
+  # CSRF state item handler settings
+  csrfStateItemHandler.cookieName="OAuth2State"
+  csrfStateItemHandler.cookiePath="/"
+  csrfStateItemHandler.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
+  csrfStateItemHandler.httpOnlyCookie=true
+  csrfStateItemHandler.sameSite="Lax"
+  csrfStateItemHandler.expirationTime=5 minutes
+
+  csrfStateItemHandler.signer.key = "[changeme]" // A unique encryption key
 
   # Facebook provider
   facebook.authorizationURL="https://graph.facebook.com/v2.3/oauth/authorize"
@@ -56,14 +70,6 @@ silhouette {
   vk.clientSecret=""
   vk.clientSecret=${?VK_CLIENT_SECRET}
   vk.scope="email"
-
-  # Clef provider
-  clef.accessTokenURL="https://clef.io/api/v1/authorize"
-  clef.redirectURL="http://localhost:9000/authenticate/clef"
-  clef.clientID=""
-  clef.clientID=${?CLEF_CLIENT_ID}
-  clef.clientSecret=""
-  clef.clientSecret=${?CLEF_CLIENT_SECRET}
 
   # Twitter provider
   twitter.requestTokenURL="https://twitter.com/oauth/request_token"
