added support for env vars in config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,97 +2,70 @@
 # ~~~~~
 
 # The application languages
-# ~~~~~
 play.i18n.langs=["de"]
 
 # Registers the request handler
-# ~~~~~
 play.http.requestHandler = "play.api.http.DefaultHttpRequestHandler"
 
 # Registers the filters
-# ~~~~~
 play.http.filters = "utils.Filters"
 
 # Enabled modules
-# ~~~~~
 play.modules.enabled += "modules.LdapModule"
 play.modules.enabled += "modules.SilhouetteModule"
 play.modules.enabled += "scalikejdbc.PlayDBApiAdapterModule"
 
+# Disabled modules
 play.modules.disabled += "com.mohiva.play.silhouette.api.actions.SecuredErrorHandlerModule"
 play.modules.disabled += "com.mohiva.play.silhouette.api.actions.UnsecuredErrorHandlerModule"
 
 # Curo configuration
-# ~~~~~
 curo.url="intern.example.org"
+curo.url=${?CURO_URL}
 curo.protocol="https://"
+curo.protocol=${?CURO_PROTOCOL}
 
 # Third party application urls
-# ~~~~~
 app.nextcloud.url="cloud.example.org"
+app.nextcloud.url=${?APP_NEXTCLOUD_URL}
 app.kanboard.url="kanban.example.org"
+app.kanboard.url=${?APP_KANBOARD_URL}
 app.discourse.url="forum.example.org"
+app.discourse.url=${?APP_DISCOURSE_URL}
 app.rocketchat.url="chat.example.org"
+app.rocketchat.url=${?APP_ROCKETCHAT_URL}
 app.kino.url="kino.example.org"
+app.kino.url=${?APP_KINO_URL}
 
 # Nextcloud configuration
-# ~~~~~
 app.nextcloud.calendar.path="/index.php/apps/calendar"
 app.nextcloud.files.path="/index.php/apps/files"
 app.nextcloud.carsharing.path="/index.php/apps/external/1"
 
 # Database configuration
-# ~~~~~
-# You can declare as many datasources as you want.
 db.default.driver=com.mysql.jdbc.Driver
+db.default.driver=${?DB_DEFAULT_DRIVER}
 db.default.url="jdbc:mysql://localhost/test"
+db.default.url=${?DB_DEFAULT_URL}
 db.default.username="root"
+db.default.username=${?DB_DEFAULT_USERNAME}
 db.default.password=""
+db.default.password=${?DB_DEFAULT_PASSWORD}
 
 # LDAP settings
 ldap.host="localhost"
+ldap.host=${?LDAP_HOST}
 ldap.port=389
+ldap.port=${?LDAP_PORT}
 ldap.bind.user.name="cn=admin,dc=example,dc=org"
+ldap.bind.user.name=${?LDAP_BIND_USER_NAME}
 ldap.bind.user.pass="password"
+ldap.bind.user.pass=${?LDAP_BIND_USER_PASS}
 ldap.group.users="ou=users,dc=example,dc=org"
+ldap.group.users=${?LDAP_GROUP_USERS}
 
 
 # Security Filter Configuration - Content Security Policy
-# ~~~~~
-#play.filters.headers.contentSecurityPolicy
-# 1.sql-src
-# 'self'
-# img-src
-# 'self'
-# fbcdn-profile-a.akamaihd.net (Facebook)
-# *.twimg.com (Twitter)
-# *.googleusercontent.com (Google)
-# *.xingassets.com (Xing)
-# vk.com (VK)
-# *.yimg.com (Yahoo)
-# secure.gravatar.com
-# style-src
-# 'self'
-# 'unsafe-inline'
-# cdnjs.cloudflare.com
-# maxcdn.bootstrapcdn.com
-# cdn.jsdelivr.net
-# fonts.googleapis.com
-# 'unsafe-inline' (in-line css found in bootstrap.min.js)
-# font-src
-# 'self'
-# fonts.gstatic.com
-# fonts.googleapis.com
-# cdnjs.cloudflare.com
-# script-src
-# 'self'
-# clef.io
-# connect-src
-# 'self'
-# twitter.com
-# *.xing.com
-# frame-src
-# clef.io
 play.filters.headers.contentSecurityPolicy="img-src 'self' data: fbcdn-profile-a.akamaihd.net *.twimg.com *.googleusercontent.com *.xingassets.com vk.com *.yimg.com secure.gravatar.com; style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com maxcdn.bootstrapcdn.com cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' data: fonts.gstatic.com fonts.googleapis.com cdnjs.cloudflare.com; script-src 'unsafe-inline' 'self' clef.io; connect-src 'self' twitter.com *.xing.com; frame-src clef.io *"
 
 include "silhouette.conf"
