--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,24 +1,6 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
-# The application languages
-play.i18n.langs=["de"]
-
-# Registers the request handler
-play.http.requestHandler = "play.api.http.DefaultHttpRequestHandler"
-
-# Registers the filters
-play.http.filters = "utils.Filters"
-
-# Enabled modules
-play.modules.enabled += "modules.LdapModule"
-play.modules.enabled += "modules.SilhouetteModule"
-play.modules.enabled += "scalikejdbc.PlayDBApiAdapterModule"
-
-# Disabled modules
-play.modules.disabled += "com.mohiva.play.silhouette.api.actions.SecuredErrorHandlerModule"
-play.modules.disabled += "com.mohiva.play.silhouette.api.actions.UnsecuredErrorHandlerModule"
-
 # Curo configuration
 curo.url="intern.example.org"
 curo.url=${?CURO_URL}
@@ -36,6 +18,12 @@ app.rocketchat.url="chat.example.org"
 app.rocketchat.url=${?APP_ROCKETCHAT_URL}
 app.kino.url="kino.example.org"
 app.kino.url=${?APP_KINO_URL}
+
+# Kanboard configuration
+kanboard.user="admin"
+kanboard.user=${?KANBOARD_USER}
+kanboard.pass=""
+kanboard.pass=${?KANBOARD_PASS}
 
 # Nextcloud configuration
 app.nextcloud.calendar.path="/index.php/apps/calendar"
@@ -67,5 +55,29 @@ ldap.group.users=${?LDAP_GROUP_USERS}
 
 # Security Filter Configuration - Content Security Policy
 play.filters.headers.contentSecurityPolicy="img-src 'self' data: fbcdn-profile-a.akamaihd.net *.twimg.com *.googleusercontent.com *.xingassets.com vk.com *.yimg.com secure.gravatar.com; style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com maxcdn.bootstrapcdn.com cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' data: fonts.gstatic.com fonts.googleapis.com cdnjs.cloudflare.com; script-src 'unsafe-inline' 'self' clef.io; connect-src 'self' twitter.com *.xing.com; frame-src clef.io *"
+
+# The application languages
+play.i18n.langs=["de"]
+
+# Registers the request handler
+play.http.requestHandler = "play.api.http.DefaultHttpRequestHandler"
+
+# Registers the filters
+play.http.filters = "utils.Filters"
+
+# Enabled modules
+play.modules.enabled += "modules.LdapModule"
+play.modules.enabled += "modules.SilhouetteModule"
+play.modules.enabled += "scalikejdbc.PlayDBApiAdapterModule"
+
+# Disabled modules
+play.modules.disabled += "com.mohiva.play.silhouette.api.actions.SecuredErrorHandlerModule"
+play.modules.disabled += "com.mohiva.play.silhouette.api.actions.UnsecuredErrorHandlerModule"
+
+play.http.secret.key="changeme"
+play.http.secret.key=${?PLAY_SECRET}
+play.evolutions.db.default.autoApply=true
+
+pidfile.path = "/dev/null"
 
 include "silhouette.conf"
