added option to trigger an alarm on issue creating + added option to send push notification via pushover + added semantic form template for checkboxes + fixed issue with forum link + enabled info logging for controllers

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,6 +7,12 @@ curo.url=${?CURO_URL}
 curo.protocol="https://"
 curo.protocol=${?CURO_PROTOCOL}
 
+# Pushover Notification - https://pushover.net/api
+pushover.token=""
+pushover.token=${?PUSHOVER_TOKEN}
+pushover.group.key= ""
+pushover.group.key=${?PUSHOVER_GROUP_KEY}
+
 # Third party application urls
 app.nextcloud.url="cloud.example.org"
 app.nextcloud.url=${?APP_NEXTCLOUD_URL}
@@ -24,6 +30,8 @@ kanboard.user="admin"
 kanboard.user=${?KANBOARD_USER}
 kanboard.pass=""
 kanboard.pass=${?KANBOARD_PASS}
+kanboard.project.id=0
+kanboard.project.id=${?KANBOARD_PROJECT_ID}
 
 # Nextcloud configuration
 app.nextcloud.calendar.path="/index.php/apps/calendar"
