added development docker-compose

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,11 +41,11 @@ app.nextcloud.carsharing.path="/index.php/apps/external/1"
 # Database configuration
 db.default.driver=com.mysql.jdbc.Driver
 db.default.driver=${?DB_DEFAULT_DRIVER}
-db.default.url="jdbc:mysql://localhost/test"
+db.default.url="jdbc:mysql://localhost/curo"
 db.default.url=${?DB_DEFAULT_URL}
-db.default.username="root"
+db.default.username="test"
 db.default.username=${?DB_DEFAULT_USERNAME}
-db.default.password=""
+db.default.password="test"
 db.default.password=${?DB_DEFAULT_PASSWORD}
 
 # LDAP settings
